add MIT license, push new README.md framwork

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "bitcoin-script-hints",
   "description": "Display the Bitcoin script! stack state as you code.",
   "version": "0.0.1",
+  "license": "MIT",
   "engines": {
     "vscode": "^1.95.0"
   },
