--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "engines": {
     "vscode": "^1.95.0"
   },
-  "publisher": "Portland.HODL",
+  "publisher": "portlandhodl",
   "categories": [
     "Programming Languages",
     "Other"
