--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bitcoin-script-hints",
   "displayName": "Rust Bitcoin Lib Script! Hints",
   "description": "Real-time stack visualization for Bitcoin Script operations in Rust projects. See the stack state as you code with inline hints showing the main stack and alt-stack after each operation.",
-  "version": "0.3.7",
+  "version": "0.4.1",
   "license": "MIT",
   "engines": {
     "vscode": "^1.95.0"
@@ -29,7 +29,15 @@
     "onLanguage:rust"
   ],
   "main": "./dist/extension.js",
-  "contributes": {},
+  "contributes": {
+    "grammars": [
+      {
+        "path": "./syntaxes/bitcoin-script.tmLanguage.json",
+        "scopeName": "source.rust.bitcoin-script",
+        "injectTo": ["source.rust"]
+      }
+    ]
+  },
   "scripts": {
     "vscode:prepublish": "npm run package",
     "build": "node esbuild.js",
