--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "bitcoin-script-hints",
-  "displayName": "Rust Bitcoin Lib Script! Hints",
+  "displayName": "Rust Bitcoin Script! Hints",
   "description": "Real-time stack visualization for Bitcoin Script operations in Rust projects. See the stack state as you code with inline hints showing the main stack and alt-stack after each operation.",
-  "version": "0.4.1",
+  "version": "0.4.3",
   "license": "MIT",
   "engines": {
     "vscode": "^1.95.0"
