--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bitcoin-script-hints",
   "displayName": "Rust Bitcoin Script! Hints",
   "description": "Realtime Bitcoin script stack visualization in Rust projects. See the stack state as you code with inline hints showing the main stack and alt-stack after each operation.",
-  "version": "0.4.8",
+  "version": "0.4.9",
   "license": "MIT",
   "engines": {
     "vscode": "^1.95.0"
@@ -52,6 +52,8 @@
     "build": "node esbuild.js",
     "build:prod": "node esbuild.js --production",
     "watch": "node esbuild.js --watch",
+    "watch:esbuild": "node esbuild.js --watch",
+    "watch:tsc": "tsc --watch",
     "lint": "eslint src",
     "check-types": "tsc --noEmit",
     "compile": "npm run build",
